# ilplib

./: .gitignore  CMakeLists.txt  README.md  Rakefile  ilplib-version.h.cmake
source/: CMakeLists.txt  CMakeLists.txt.backup
source/knlp/: normalize.cpp
source/knlp/maxent/: lbfgs.cpp  maxent.cpp  owlqn.cpp  sgd.cpp
source/la/: CMakeLists.txt  ConfigureChecks.cmake  README
source/la/docs/html/: Analyzer_8h-source.html  Analyzer_8h.html  AuxVerb_8cpp-source.html  AuxVerb_8cpp.html  AuxVerb_8h-source.html  AuxVerb_8h.html  Buffer_8cpp-source.html  Buffer_8cpp.html  Buffer_8h-source.html  Buffer_8h.html  DecomposeNNP_8cpp-source.html  DecomposeNNP_8cpp.html  DecomposeNNP_8h-source.html  DecomposeNNP_8h.html  Dictionary_8cpp-source.html  Dictionary_8cpp.html  Dictionary_8h-source.html  Dictionary_8h.html  Eojul_8cpp-source.html  Eojul_8cpp.html  Eojul_8h-source.html  Eojul_8h.html  ExtendedCP949_8cpp-source.html  ExtendedCP949_8cpp.html  ExtendedCP949_8h-source.html  ExtendedCP949_8h.html  LACache_8h-source.html  LACache_8h.html  LAManager_8cpp-source.html  LAManager_8cpp.html  LAManager_8h-source.html  LAManager_8h.html  LengthFilter_8cpp-source.html  LengthFilter_8cpp.html  LengthFilter_8h-source.html  LengthFilter_8h.html  MAnalyzer_8cpp-source.html  MAnalyzer_8cpp.html  MAnalyzer_8h-source.html  MAnalyzer_8h.html  (+543 more)
source/la/docs/latex/: Analyzer_8h.tex  Buffer_8h.tex  DecomposeNNP_8cpp.tex  Dictionary_8cpp.tex  Eojul_8h.tex  ExtendedCP949_8cpp.tex  ExtendedCP949_8h.tex  LACache_8h.tex  LAManager_8h.tex  NGramAnalyzer_8cpp.tex  NounFilter_8cpp.tex  NounFilter_8h.tex  POSTaggerEnglish_8h.tex  PreFinalEomi_8h.tex  Preprocesser_8cpp.tex  Stemmer_8h.tex  StopFilter_8cpp.tex  StopFilter_8h.tex  StopWord_8cpp.tex  StopWord_8h.tex  StrStream_8cpp.tex  StrStream_8h.tex  Synonym_8cpp.tex  Synonym_8h.tex  TagSet_8cpp.tex  TagSet_8h.tex  TermVector_8cpp.tex  TermVector_8h.tex  Term_8h.tex  Tokenizer_8h.tex  api_8cpp.tex  api_8h.tex  bidir_8h.tex  classDivideInfo.tex  classGuessCandidate.tex  classHeadTailInfo.tex  classJEInfo.tex  classJosaEomiTrieInfo.tex  classMainTrieInfo.tex  classOnsetJosaEomiInfo.tex  (+91 more)
source/la/source/: Analyzer.cpp  CMakeLists.txt  ChineseLanguageAction.cpp  CommonLanguageAnalyzer.cpp  EnglishAnalyzer.cpp  KoreanLanguageAction.cpp  LA.cpp  MatrixAnalyzer.cpp  MultiLanguageAnalyzer.cpp  NGramAnalyzer.cpp  PlainDictionary.cpp  StemAnalyzer.cpp  SynonymAnalyzer.cpp  Term.cpp  Tokenizer.cpp  UpdateDictThread.cpp  makefile
source/la/source/analyzer/: Analyzer.cpp  CharAnalyzer.cpp  ChineseAnalyzer.cpp  ChineseLanguageAction.cpp  CommonLanguageAnalyzer.cpp  EnglishAnalyzer.cpp  JapaneseAnalyzer.cpp  KoreanAnalyzer.cpp  KoreanLanguageAction.cpp  MatrixAnalyzer.cpp  MultiLanguageAnalyzer.cpp  NGramAnalyzer.cpp  StemAnalyzer.cpp  SynonymAnalyzer.cpp  TokenAnalyzer.cpp
source/la/source/common/: Term.cpp
source/la/source/dict/: PlainDictionary.cpp  UpdatableSynonymContainer.cpp  UpdateDictThread.cpp
source/la/source/pos/: POSTaggerEnglish.cpp  bidir.cpp  maxent.cpp  postag.cpp  tokenize.cpp
source/la/source/stem/: Stemmer.cpp  api.cpp  stem_UTF_8_danish.cpp  stem_UTF_8_dutch.cpp  stem_UTF_8_english.cpp  stem_UTF_8_finnish.cpp  stem_UTF_8_french.cpp  stem_UTF_8_german.cpp  (+10 more)
source/la/test/: CMakeLists.txt  Preprocesser.cpp  makefile  performance-test.cpp  t_Analyzer.cpp  t_CharAnalyzer.cpp  t_ChineseAnalyzer.cpp  t_DynamicDict.cpp  t_EnglishAnalyzer.cpp  t_KoreanAnalyzer.cpp  t_KoreanAnalyzer.cpp.backup  t_LA.cpp  t_MultiLanguageAnalyzer.cpp  t_StemAnalyzer.cpp  t_TokenAnalyzer.cpp  t_Tokenizer.cpp  t_UnigramAnalyzer.cpp  test_def.h
source/langid/: CMakeLists.txt  CMakeLists.txt.backup
source/langid/include/: analyzer_impl.h  doxygen_mainpage.h  encoding_analyzer.h  knowledge_impl.h  language_analyzer.h  profile.h  profile_model.h  profile_selector.h  property_table.h  script_table.h  sentence_break_table.h  sentence_tokenizer.h  sentence_tokenizer.inl  ucs2_converter.h
source/langid/src/: CMakeLists.txt  analyzer.cpp  analyzer_impl.cpp  encoding_analyzer.cpp  factory.cpp  knowledge.cpp  knowledge_impl.cpp  langid_build_encoding_model.cpp  langid_build_language_model.cpp  langid_create_profile.cpp  langid_measure_profile.cpp  langid_select_profile.cpp  language_analyzer.cpp  profile.cpp  profile_model.cpp  profile_selector.cpp  property_table.cpp  script_table.cpp  sentence_break_table.cpp  sentence_tokenizer.cpp
source/langid/test/: CMakeLists.txt  test_langid_perf.cpp  test_langid_run.cpp  test_language_analyzer.cpp  test_multithread.cpp  test_script_table.cpp  test_sentence_break_table.cpp  test_sentence_tokenizer.cpp  test_ucs2_converter.cpp
source/langid/tool/: CMakeLists.txt  langid_build_encoding_model.cpp  langid_build_language_model.cpp  langid_create_profile.cpp  langid_measure_profile.cpp
source/langid/web-demo/: CMakeLists.txt  appws.c  appws.h  demo-server.cpp
source/question-answering/: CMakeLists.txt  QuestionAnalysis.cpp
source/sbd/src/: common.cpp
source/sbd/test/: CMakeLists.txt  t_base.cpp  t_collocation.cpp  t_common.cpp  t_common.h  t_language.cpp  t_regex.cpp  t_sbd.cpp  t_token.cpp  t_trainer.cpp
test/knlp/: CMakeLists.txt  KNlpTokenizeTestFixture.cpp  KNlpTokenizeTestFixture.h  Runner.cpp  attr_token_util.cpp  attr_util.cpp  cate_precision.cpp  cluster_util.cpp  datrie_util.cpp  differential_token_util.cpp  etao_downloader.cpp  fill_idf.cpp  fill_naive_bayes.cpp  fmm_util.cpp  get_tags_util.cpp  grep.cpp  horse_tokenize_util.cpp  kw_condition_util.cpp  makeup_etao_downloader.cpp  maxent_util.cpp  mmseg_util.cpp  new_tao_cate_test.cpp  normaize_util.cpp  scd_treater_util.cpp  t_datrie.cpp  t_kdictionary.cpp  t_knlp_tokenize.cpp  t_load_resource.cpp  tao_cate_test.cpp  taobao_downloader.cpp  title_pca_util.cpp  token_t-test.cpp  tokenize_unigram_train.cpp  tokenize_util.cpp  william_trie_util.cpp
test/langid/: CMakeLists.txt  LangidTestFixture.cpp  LangidTestFixture.h  Runner.cpp  t_identify_encoding.cpp  t_identify_multi_language.cpp  t_identify_primary_language.cpp  t_tokenize_sentence.cpp  t_ucs2_converter.cpp
(+318 files in other folders)
