include_directories(./langid/include)

FILE( GLOB_RECURSE SOURCE
  "${CMAKE_CURRENT_SOURCE_DIR}/la/source/*.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/langid/src/*.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/question-answering/*.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/sbd/src.cpp"
  #  "${CMAKE_CURRENT_SOURCE_DIR}/knlp/*.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/re2/*.cc"


  #"stem/*.cpp"
  #"wrapper/*.cpp"
  #"pos/*.cpp"
  )

ADD_LIBRARY(ilplib SHARED ${SOURCE})
INSTALL(TARGETS ilplib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/langid)
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/langid/test")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/langid/tool")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/la)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/sbd)
#ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/sbd/test")

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/bin")
