SET( LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/../lib" )

IF(ENABLE_TEST)
  ENABLE_TESTING()
ENDIF(ENABLE_TEST)

add_definitions("-fpermissive")

INCLUDE_DIRECTORIES(
  ${izenelib_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  )

LINK_DIRECTORIES(
    ${izenelib_LIBRARY_DIRS}
    )

FILE( GLOB_RECURSE SOURCE
  "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
  )

ADD_LIBRARY(qa SHARED ${SOURCE})
TARGET_LINK_LIBRARIES(qa ${izenelib_LIBRARIES})
INSTALL(TARGETS qa
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
